[gd_scene load_steps=10 format=4 uid="uid://ca5thwukmu30v"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_judag"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_y00r3"]
[ext_resource type="FontFile" uid="uid://ee7xbhgb8w64" path="res://assets/fonts/PressStart2P.ttf" id="3_cjmvt"]
[ext_resource type="Script" path="res://scripts/control.gd" id="4_fwonn"]
[ext_resource type="PackedScene" uid="uid://blevcbgd4ugyc" path="res://scenes/player.tscn" id="5_yws47"]
[ext_resource type="Texture2D" uid="uid://cxp7vk8imjwqt" path="res://assets/environment/bg_jungle_lr.png" id="6_btl1f"]
[ext_resource type="Texture2D" uid="uid://bprs7x4ipnwa0" path="res://assets/environment/tilesheet_lr.png" id="8_8u02r"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44530"]
texture = ExtResource("8_8u02r")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, 32, -32, 32, 32)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 16, 0, 0, 32, 16, 32, 32, -32, 32)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 16, 0, 0, 32, 16, 32, 32, -32, 32, -32, 16)
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:11/0 = 0
5:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:11/0 = 0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0

[sub_resource type="TileSet" id="TileSet_jqmc4"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_44530")

[node name="BaseNode" type="Node"]
script = ExtResource("1_judag")

[node name="MainMenu" type="CanvasLayer" parent="."]
script = ExtResource("2_y00r3")

[node name="GameTitle" type="Label" parent="MainMenu"]
z_index = 1
offset_left = 128.0
offset_top = 128.0
offset_right = 1792.0
offset_bottom = 270.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 28
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 112
text = "Flying Turtles"

[node name="P1" type="Label" parent="MainMenu"]
z_index = 1
offset_left = 192.0
offset_top = 384.0
offset_right = 790.0
offset_bottom = 456.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 56
text = "Player 1"
horizontal_alignment = 1

[node name="P2" type="Label" parent="MainMenu"]
z_index = 1
offset_left = 1088.0
offset_top = 384.0
offset_right = 1727.0
offset_bottom = 456.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 56
text = "Player 2"
horizontal_alignment = 1

[node name="Enter2Start" type="Label" parent="MainMenu"]
z_index = 1
offset_left = 128.0
offset_top = 768.0
offset_right = 1600.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 72
text = "Press enter to start"

[node name="Enter2Start-Dot" type="Label" parent="MainMenu"]
z_index = 1
offset_left = 1600.0
offset_top = 768.0
offset_right = 1816.0
offset_bottom = 840.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 72
text = "..."

[node name="Attributions" type="Label" parent="MainMenu"]
z_index = 1
offset_left = 256.0
offset_top = 896.0
offset_right = 1664.0
offset_bottom = 1024.0
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 20
text = "Attributions. : 
https://opengameart.org/content/high-res-fire-ball
https://opengameart.org/content/explosion
https://opengameart.org/content/2d-platformer-jungle-pack
Tio Aimar @ opengameart.org
https://www.kenney.nl/assets/abstract-platformer
"

[node name="Background" type="ColorRect" parent="MainMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00736)
color = Color(0, 0, 0, 0.945098)

[node name="Control" type="Control" parent="MainMenu"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_fwonn")

[node name="UpP1" type="Button" parent="MainMenu/Control"]
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 512.0
offset_right = 640.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 48
text = "Up:Z"
alignment = 0

[node name="DownP1" type="Button" parent="MainMenu/Control"]
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 576.0
offset_right = 640.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 48
text = "Down: D"
alignment = 0

[node name="ShootP1" type="Button" parent="MainMenu/Control"]
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 640.0
offset_right = 640.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 48
text = "Shoot: Z"
alignment = 0

[node name="UpP2" type="Button" parent="MainMenu/Control"]
z_index = 1
layout_mode = 0
offset_left = 1024.0
offset_top = 512.0
offset_right = 1536.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 48
text = "Up: Z"
alignment = 0

[node name="DownP2" type="Button" parent="MainMenu/Control"]
z_index = 1
layout_mode = 0
offset_left = 1024.0
offset_top = 576.0
offset_right = 1536.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 48
text = "Down: D"
alignment = 0

[node name="ShootP2" type="Button" parent="MainMenu/Control"]
z_index = 1
layout_mode = 0
offset_left = 1024.0
offset_top = 640.0
offset_right = 1536.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 48
text = "Shoot: Z"
alignment = 0

[node name="Player1" parent="." groups=["Player"] instance=ExtResource("5_yws47")]
collision_mask = 7

[node name="Player2" parent="." groups=["Player"] instance=ExtResource("5_yws47")]
position = Vector2(1677.36, 914.38)
rotation = -3.14159
scale = Vector2(1, -1)
collision_mask = 7
player_number = 2
orientation = -1.0

[node name="Environment" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Environment"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_btl1f")
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="Environment"]
z_index = -1
position = Vector2(-0.585815, 3)
tile_map_data = PackedByteArray("AAABAA8AAQACAAkAAAACAA8AAQACAAkAAAADAA8AAQACAAkAAAAEAA8AAQACAAkAAAAFAA8AAQACAAkAAAAGAA8AAQACAAkAAAAHAA8AAQACAAkAAAAIAA8AAQACAAkAAAAJAA8AAQACAAkAAAAKAA8AAQACAAkAAAALAA8AAQACAAkAAAAMAA8AAQACAAkAAAANAA8AAQACAAkAAAAOAA8AAQACAAkAAAAPAA8AAQACAAkAAAAQAA8AAQACAAkAAAARAA8AAQACAAkAAAASAA8AAQACAAkAAAATAA8AAQACAAkAAAAUAA8AAQACAAkAAAAVAA8AAQACAAkAAAAWAA8AAQACAAkAAAAXAA8AAQACAAkAAAAYAA8AAQACAAkAAAAZAA8AAQACAAkAAAAaAA8AAQACAAkAAAAbAA8AAQACAAkAAAAcAA8AAQACAAkAAAAAAA8AAQABAAkAAAAdAA8AAQADAAkAAAAAABAAAQAAAAkAAAABABAAAQAAAAkAAAACABAAAQAAAAkAAAADABAAAQAAAAkAAAAEABAAAQAAAAkAAAAFABAAAQAAAAkAAAAGABAAAQAAAAkAAAAHABAAAQAAAAkAAAAIABAAAQAAAAkAAAAJABAAAQAAAAkAAAAKABAAAQAAAAkAAAALABAAAQAAAAkAAAAMABAAAQAAAAkAAAANABAAAQAAAAkAAAAOABAAAQAAAAkAAAAPABAAAQAAAAkAAAAQABAAAQAAAAkAAAARABAAAQAAAAkAAAASABAAAQAAAAkAAAATABAAAQAAAAkAAAAUABAAAQAAAAkAAAAVABAAAQAAAAkAAAAWABAAAQAAAAkAAAAXABAAAQAAAAkAAAAYABAAAQAAAAkAAAAZABAAAQAAAAkAAAAaABAAAQAAAAkAAAAbABAAAQAAAAkAAAAcABAAAQAAAAkAAAAdABAAAQAAAAkAAAALAA4AAQALAAMAAAAQAA4AAQAKAAMAAAATAA4AAQALAAMAAAAXAA4AAQALAAMAAAAHAA4AAQALAAMAAAAcAA4AAQAKAAMAAAAUAA4AAQAKAAMAAAAOAAYAAQACAAkAAAAPAAYAAQACAAkAAAAQAAYAAQACAAkAAAARAAYAAQACAAkAAAASAAYAAQACAAkAAAANAAYAAQAHAAoAAAATAAYAAQAIAAoAAAANAAUAAQANAAkAAAAOAAUAAQANAAkAAAAPAAUAAQANAAkAAAARAAUAAQANAAkAAAAQAAUAAQANAAkAAAASAAUAAQANAAkAAAATAAUAAQANAAkAAAAIAAsAAQATAAIAAAAdAA4AAQATAAIAAAAdAA0AAQATAAIAAAAdAAwAAQATAAIAAAAdAAsAAQATAAIAAAAdAAoAAQATAAIAAAAdAAkAAQATAAIAAAABAA4AAQATAAIAAAABAA0AAQATAAIAAAABAAwAAQASAAEAAAAIAAwAAQASAAIAAAAIAA0AAQASAAIAAAAIAA4AAQASAAIAAAAdAAgAAQATAAEAAAAIAAoAAQASAAEAAAANAA4AAQAVAAMAAAANAA0AAQAUAAEAAAA=")
tile_set = SubResource("TileSet_jqmc4")

[node name="CanvasLayer" type="CanvasLayer" parent="Environment"]

[node name="Label" type="Label" parent="Environment/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="ScoreLabel" type="Label" parent="Environment"]
layout_mode = 0
offset_left = 704.0
offset_top = 64.0
offset_right = 1280.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 128
text = "2:6"
horizontal_alignment = 1

[node name="P1CrashLabel" type="Label" parent="Environment"]
layout_mode = 0
offset_left = 75.0
offset_top = 56.0
offset_right = 640.0
offset_bottom = 203.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 47
text = "P1 crashed! 
Press enter
to restart!"

[node name="P2CrashLabel" type="Label" parent="Environment"]
layout_mode = 0
offset_left = 1344.0
offset_top = 64.0
offset_right = 1861.0
offset_bottom = 211.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 47
text = "P1 crashed! 
Press enter
to restart!"

[node name="WinnerScreen" type="ColorRect" parent="Environment"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
color = Color(0, 0, 0, 0.815686)

[node name="WinnerLabel" type="Label" parent="Environment/WinnerScreen"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("3_cjmvt")
theme_override_font_sizes/font_size = 128
text = "P1 wins!"
horizontal_alignment = 1
vertical_alignment = 1
